added Mingur's Videos

--- a/ytube/ytnoad.htm
+++ b/ytube/ytnoad.htm
@@ -28,10 +28,11 @@ usage: https://{{site.data.ipfs.bafy}}.cf-ipfs.com/#-ar9vsmFhJU
 <body>
 <!-- list: {{ site.data.videos.id | join: ', '  }} -->
 <!-- hours: {{hours}} -->
+<div class="content">
 <div class="player content">
 <div id=player> Watch YouTube Video w/o Advertisements !</div>
-<br clear="all"/>
 </div>
+<br clear="all"/>
 <!-- OnEnter : see [*](https://www.w3schools.com/howto/howto_js_trigger_button_enter.asp) -->
 <div>search: <input type="text" name="query" id="query" value="" OnChange="searchVideo(this.value);"></div>
 
@@ -40,8 +41,9 @@ modulo: {{site.data.videos.id.size}}
 random: {{random}}
 video: {{site.data.videos.id[random]}}
 </pre>
+</div>
 
-<br>--&nbsp;<br><a href=https://{{site.data.ipfs.bafy}}.cf-ipfs.com/ytnoad.htm#{{videoid}}>https://{{site.data.ipfs.bafy}}.cf-ipfs.com/ytnoad.htm#{{videoid}}</a
+<br>--&nbsp;<br><a href=https://{{site.data.ipfs.bafy}}.ipfs.dweb.link/ytnoad.htm#{{videoid}}>https://{{site.data.ipfs.bafy}}.ipfs.dweb.link/ytnoad.htm#{{videoid}}</a
 </body>
 
 <script>
