playlist update on 01/21/21:\n diff --git a/ytube/_data/lists/TEDs-keys.yml b/ytube/_data/lists/TEDs-keys.yml index 15044ba..be337e7 100644 --- a/ytube/_data/lists/TEDs-keys.yml +++ b/ytube/_data/lists/TEDs-keys.yml @@ -4,0 +5 @@ +- pczLRco6nyI # Jesse Draper at TEDxBayArea diff --git a/ytube/_data/lists/big-data-keys.yml b/ytube/_data/lists/big-data-keys.yml index c773745..4f1964d 100644 --- a/ytube/_data/lists/big-data-keys.yml +++ b/ytube/_data/lists/big-data-keys.yml @@ -4,0 +5,6 @@ +- oF_2uDb7DvQ # What is ETL | What is Data Warehouse | OLTP vs OLAP +- I32hmY4diFY # ETL Is Dead, Long Live Streams: real-time streams w/ Apache Kafka +- jyxS2bvQGxc # The War on Big Tech - Everything is About to Change +- c2Kf-rXI_pk # Google’s Hidden CIA Connection - The Full Story +- p8N0xN0ihMA # Scandal and Betrayal: The Story of How Twitter Started + diff --git a/ytube/_data/lists/capitalism-keys.yml b/ytube/_data/lists/capitalism-keys.yml index b73fa08..4bf9163 100644 --- a/ytube/_data/lists/capitalism-keys.yml +++ b/ytube/_data/lists/capitalism-keys.yml @@ -11,0 +12 @@ +- Bfe0GfRNIJg # Elon Musk on the Mass Exodus of Business from California diff --git a/ytube/_data/lists/clickbate-keys.yml b/ytube/_data/lists/clickbate-keys.yml index dda8b24..2156375 100644 --- a/ytube/_data/lists/clickbate-keys.yml +++ b/ytube/_data/lists/clickbate-keys.yml @@ -18,0 +19 @@ +- 6HERP5D6QYk # Dear New Youtubers.. Stop Doing This diff --git a/ytube/_data/lists/coding-keys.yml b/ytube/_data/lists/coding-keys.yml index 1dd7dfd..d8fefd3 100644 --- a/ytube/_data/lists/coding-keys.yml +++ b/ytube/_data/lists/coding-keys.yml @@ -20,0 +21 @@ +- Hfx6abgccWg # My 3 Simple Rules to Learn to Code diff --git a/ytube/_data/lists/economy-keys.yml b/ytube/_data/lists/economy-keys.yml index 8505206..e2c4282 100644 --- a/ytube/_data/lists/economy-keys.yml +++ b/ytube/_data/lists/economy-keys.yml @@ -25,0 +26 @@ +- uj7A29_9Z3M # Why 97% Will Lose EVERYTHING After 2020! | Robert Kiyosaki diff --git a/ytube/_data

--- a/ytube/ytnoad.htm
+++ b/ytube/ytnoad.htm
@@ -48,13 +48,17 @@ fragment: <span id=fragment>{{site.data.videos.id[-1]}}</span>
 </body>
 
 <script>
+ var fragment;
  var origin = document.location.origin;
- var hash = document.location.hash;
- var fragment
- if (typeof(hash) == 'undefined' || hash == '') {
-   fragment = '{{site.data.videos.id[random]}}'
+ console.info('location:',document.location);
+ let hash = document.location.hash;
+ let search = document.location.search;
+ if (typeof(search) != 'undefined' && search != '') {
+   fragment = search.replace(/.*=/,'');
+ } else if (typeof(hash) != 'undefined' && hash != '') {
+   fragment = hash.substring(1).replace(/.*v=/,'');
  } else {
-   fragment = hash.substring(1);
+   fragment = '{{site.data.videos.id[random]}}'
  }
  document.getElementById('fragment').innerHTML = fragment;
 
